# FourierHeatmap

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yaml
apps/: eval.py
conf/: config.yaml
fhmap/: __init__.py  fourier_base.py  fourier_basis_augmented_dataset.py  fourier_heatmap.py
fhmap/apps/: eval_error.py  eval_fhmap.py
fhmap/config/: eval_error.yaml
fhmap/factory/: dataset.py
fhmap/factory/archs/: resnet.py  wideresnet.py
fhmap/fourier/: __init__.py  basis.py  heatmap.py  noise.py
fhmap/schema/: __init__.py  arch.py  dataset.py  env.py
legacy/apps/: eval.py
legacy/conf/: misc.yaml
legacy/conf/dataset/: cifar10.yaml
legacy/fhmap/: fourier_base.py  fourier_basis_augmented_dataset.py  fourier_heatmap.py  fourier_heatmap_fba_dataset.py
legacy/misc/: data.py  flag_holder.py  io.py
legacy/misc/models/: alexnet.py
misc/: data.py  metric.py  model.py
misc/models/: cifar10_resnet.py  wideresnet.py
provision/docker/: .env  Dockerfile  docker-compose.yaml
tests/: conftest.py
tests/fourier/: test_basis.py
